--- a/task2/mikelepekhin.html
+++ b/task2/mikelepekhin.html
@@ -1,9 +1,7 @@
-<html>
+<html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>
-      Резюме - Михаил Лепехин
-    </title>
+    <title>Резюме - Михаил Лепехин</title>
   </head>
   <body>
     <div class = "about">
