--- a/task2/mikelepekhin.html
+++ b/task2/mikelepekhin.html
@@ -14,6 +14,8 @@
        <a href = "http://vk.com/mlepehin1">ВКонтакте</a>
        
        <a href = "http://t.me/MikeLepekhin">Telegram</a>
+       
+       Любую другую контактную информацию спрашивайте в Telegram или в VK.
     </div>
   </body>
 </html>
