--- a/task2/mikelepekhin.html
+++ b/task2/mikelepekhin.html
@@ -1,7 +1,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Резюме - Михаил Лепехин</title>
+    <title>Резюме - Mikhail Lepekhin</title>
   </head>
   <body>
     <div class = "about">
