--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     
     <div id="root">
+    <ul><li> <span>Сделать задание #3 по web-программированию</span> <button id = "del_btn">Удалить</button> </li></ul>
     </div>
     
     <script src="app.js">
